# Proctoring

./: .gitignore
Procturing_analysis/: .gitignore  README.md  profile_loading_times.py  pyproject.toml  requirements.txt  test_pyannote_cache.py  vimeo_proctor_report.py
Procturing_analysis/src/: __init__.py  config.py  face_and_gaze_analysis.py  lip_sync_detection.py  object_detection.py  object_detection_rf.py  report_builder.py  testing_face.py  testing_voice.py  utils.py  video_utils.py  voice_diarization.py
Procturing_analysis/templates/: report_template.html
Procturing_analysis/tests/: test_output.txt  test_parallel_execution.py
backend/: .gitignore  README.md  app.py  face_utils.py  main.py  pyproject.toml  requirements.txt  test.py  voice_utils.py
backend/src/: __init__.py  app.py  config.py
backend/src/api/: __init__.py  routes.py  schemas.py
backend/src/models/: __init__.py  session.py
backend/src/services/: report_service.py  session_service.py
backend/src/utils/: face_utils.py  voice_utils.py
backend/tests/: __init__.py  test_face_detection.py
camera-app/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.app.json
camera-app/src/: App.tsx  index.css
camera-app/src/components/: CameraPreview.tsx  CautionBanner.tsx  DoneScreen.tsx  InterviewScreen.tsx  RulesCard.tsx  ToastAlert.tsx
camera-app/src/hooks/: useProctoring.ts
camera-app/src/utils/: captureFrame.ts  eventTypes.ts
